added play button

--- a/css/app.css
+++ b/css/app.css
@@ -69,3 +69,9 @@ td[show="copied"] i:hover{
 .select2-container--open {
     width: 800px !important; /* Increase the width as needed */
 }
+
+.movieControlButton{
+    background: none;
+    position: relative;
+    top: -6px;
+}
